[package]
name = "L4AddonEnforcer"
version = "0.0.1"
edition = "2021"
license = "LGPL-3.0-only"
authors = ["Dominik Adrian Grzywak"]
description = "An addon installer for Left 4 Dead 2 that will let you use them on official servers"
categories = ["gui"]
homepage = "https://github.com/StarterX4/L4AddonEnforcer"
#repository = "https://github.com/StarterX4/L4AddonEnforcer"
#rust-version = "1.82"

[dependencies]
colored = "3.0.0"
helptext = "0.1.1"
md-5 = "0.10.6"
path-dedot = "3.1.1"
steamlocate = "2.0.1"
thiserror = "2.0.11"
#fltk = { version = "1.4", default-features = false, features = ["use-ninja","use-wayland"]}
#fltk-sys = "1.5.2"
#fltk-theme = "0.7"
#nix = "0.29.0"
#regex = "1.11.1"
#walkdir = "2.5.0"
#which = "7.0.1"

# The default release profile. It contains all optimizations, without
# sacrificing debug info. With this profile (like in the standard
# release profile), the debug info and the stack traces will still be available.
[profile.release]
lto = true
strip = true

# A release-like profile that is tuned to be fast, even when being fast
# compromises on binary size. This includes aborting on panic.
[profile.release-fast]
inherits = "release"
panic = "abort"

# A release-like profile that is as small as possible.
[profile.release-small]
inherits = "release"
opt-level = "z"
panic = "abort"
strip = true

[target.x86_64-pc-windows-gnu]
