[package]
name = "L4AddonEnforcer"
version = "0.4.99"
edition = "2024"
license = "LGPL-3.0-only"
authors = ["Dominik Adrian Grzywak"]
description = "An addon installer for Left 4 Dead 2 that will let you use them on official servers"
categories = ["command-line-utilities", "game-tools", "gui"]
homepage = "https://github.com/StarterX4/L4AddonEnforcer"
repository = "https://github.com/StarterX4/L4AddonEnforcer"
rust-version = "1.85"

[dependencies]
clap = { version = "4.5.32", default-features = false, features = ["derive", "std"] }
colored = "3.0.0"
helptext = "0.1.1"
md-5 = "0.10.6"
path-dedot = "3.1.1"
steamlocate = "2.0.1"
thiserror = "2.0.11"
fltk = { version = "1.5", default-features = false, features = ["use-ninja","use-wayland"]}
fltk-theme = "0.7"
sourcepak = { version = "0.3.0", features = ["mem-map"] }
regex = "1.11.1"
sanitize-filename = "0.6.0"

# The default release profile. It contains all optimizations, without
# sacrificing debug info. With this profile (like in the standard
# release profile), the debug info and the stack traces will still be available.
[profile.release]
codegen-units = 1
lto = true
strip = true

# A release-like profile that is tuned to be fast, even when being fast
# compromises on binary size. This includes aborting on panic.
[profile.release-fast]
inherits = "release"
panic = "abort"

# A release-like profile that is as small as possible.
[profile.release-small]
inherits = "release"
opt-level = "z"
panic = "abort"
strip = true

[target.x86_64-pc-windows-gnu]
